--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-* {
+ * {
    margin: 0px;
    padding: 0px;
    font-family: Arial;
@@ -304,6 +304,26 @@ ul a {
 a {
    color: #FFFFFF;
    text-decoration: none;
+}
+.Products a {
+   color: black;
+   text-decoration: none;
+}
+.Products button{
+   position:relative;
+   width: 70%;
+   left:15%;
+   height: 40px;
+   border:none;
+   outline:unset;
+   text-align: center;
+   margin: 30px;
+   border-radius: 10px;
+}
+button:hover{
+   background-color: #f0da1a;
+   color:white;
+   font-weight: bold;
 }
 
 @media (max-width: 320px) {
